# ParaSeq

./: .gitignore  LICENSE  README.md  pyproject.toml  tool documentation.txt
data/: bad.fasta  good.fasta  header.fasta  malformed.fasta  multiline.fasta
output/: example_output.txt
src/para_seq/: __init__.py  input_manager.py  io_manager.py  local_alignment.py  main.py  output_manager.py  utils.py
tests/: test_init.py  test_input_manager.py  test_io_manager.py  test_local_alignment.py  test_main.py  test_output_manager.py  test_utils.py
