[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "para_seq"
version = "0.0.1"
requires-python = ">=3.13.0"
description = "TODO"
authors = [
    { name = "Michele Ferrari", email = "mikif.2002@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pyfastx"
]

[tool.setuptools.packages.find]
where = ["src"]